# tree-sitter-nasl

./: Cargo.toml  LICENSE  README.md  binding.gyp  grammar.js  package-lock.json  package.json
.github/workflows/: tests.yml
bindings/node/: binding.cc  index.js
bindings/rust/: lib.rs
corpus/: calls.txt  comments.txt  foreach.txt  functions.txt  loops.txt  operator.txt  strings.txt
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/: comment.nasl  example_function.nasl  minimal_example.nasl  rofl.nasl
test/corpus/: assignments.txt  calls.txt  comments.txt  functions.txt  if.txt  operator.txt  strings.txt
