[package]
name = "tree-sitter-nasl"
description = "nasl grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "nasl"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/nichtsfrei/tree-sitter-nasl"
edition = "2018"
license = "MIT"
authors = ["Philipp Eder <philipp.eder@posteo.net>"]

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20"

[build-dependencies]
cc = "1.0"
